# debkit

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  UPDATE_PROCEDURE.md  justfile  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: debkit.ex
lib/debkit/: ar.ex  error.ex  native.ex  tar.ex
lib/debkit/tar/: entry.ex
native/debkit/: Cargo.toml
native/debkit/src/: lib.rs
test/: debkit_test.exs  test_helper.exs
test/debkit/: ar_test.exs  deb_roundtrip_test.exs  dpkg_interop_test.exs  tar_test.exs
